Updated files for submission

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			svg.append("rect")
 			.attr("width", "100%")
 			.attr("height", "90%")
-			.attr("fill", "white");
+			.attr("fill", "#ededed");
 	
 
 	
