Commit for final presentation and submission

--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-   <title>My project</title>
+   <title>Bamboo Mobile Health Viz</title>
     <script src="d3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="cal-heatmap.min.js"></script>
-	<script type="text/javascript">
-		function clearBox(elementID)
-		{
-			document.getElementById(elementID).innerHTML = "";
-		}
-	</script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<link href="cal-heatmap.css" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.ico">
    
  </head>
  <body>
 	
 	<div id="title"><a href="http://www.bamboomobilehealth.com" target="_blank"><img src="title.PNG"></a></div>
-	<p>SELECT SYMPTOM</p>
+	<p id="select">SELECT SYMPTOM</p>
 	<!-- This is old code, may be useful if more symptoms get added
 	<select onChange="displayViz(this) && location.reload()">
 		<option value="PAIN">PAIN</option>
@@ -24,12 +20,29 @@
 		<option value="MOBILITY">MOBILITY</option>
 		<option value="BRAINFOG">BRAINFOG</option>
      </select> -->
-	 <button type="button" onClick="displayPain() && location.reload()">PAIN</button>
-	 <button type="button" onClick="displayFatigue() && location.reload()">FATIGUE</button>
-	 <button type="button" onClick="displayMobility() && location.reload()">MOBILITY</button>
-	 <button type="button" onClick="displayBrainFog() && location.reload()">BRAINFOG</button>
+	 <button type="button" id="pain" onClick="displayPain() && location.reload()">PAIN</button>
+	 <button type="button" id="fatigue" onClick="displayFatigue() && location.reload()">FATIGUE</button>
+	 <button type="button" id="mobility" onClick="displayMobility() && location.reload()">MOBILITY</button>
+	 <button type="button" id="brainfog" onClick="displayBrainFog() && location.reload()">BRAINFOG</button>
+	<p id="caltitle"></p>
 	<div id="cal2"></div>
 	<script type="text/javascript">
+	
+		$(document).ready(function(){
+					$("#pain").click(function(){
+						$('#caltitle').html('Pain Selected');
+					});
+					$("#fatigue").click(function(){
+						$('#caltitle').html('Fatigue Selected');
+					});
+					$("#mobility").click(function(){
+						$('#caltitle').html('Mobility Selected');
+					});
+					$("#brainfog").click(function(){
+						$('#caltitle').html('Brainfog Selected');
+					});
+				});
+	
 		
 		var text = document.getElementById("cal2");
 		// This checks for mobile
@@ -45,16 +58,18 @@
 			id : "graph_c",
 			domain: "month",
 			subDomain: "x_day",
-			subDomainTextFormat: "%d",
-			domainGutter: 20,
-			cellSize:55,
+			subDomainTextFormat: "%a, %d",
+			domainGutter: 10,
+			cellSize:75,
+			cellPadding: 3,
 			label: {
 				position: "top"
 			} ,
 			itemName: ["level", "level"],
 			weekStartOnMonday: false,
-			displayLegend: true,
-			legend: [-1,0,1, 2, 3,4] 	// Custom threshold for the scale
+			displayLegend: false,
+			legend: [-1,0,1, 2, 3,4], 	// Custom threshold for the scale
+			legendCellSize: 30
 		});
 		}
 		else {
@@ -68,7 +83,7 @@
 				id : "graph_c",
 				domain: "month",
 				subDomain: "x_day",
-				subDomainTextFormat: "%d",
+				subDomainTextFormat: "%a, %d",
 				domainGutter: 20,
 				cellSize:55,
 				label: {
@@ -76,8 +91,9 @@
 				} ,
 				itemName: ["level", "level"],
 				weekStartOnMonday: false,
-				displayLegend: true,
-				legend: [-1,0,1, 2, 3,4] 	// Custom threshold for the scale
+				displayLegend: false,
+				legend: [-1,0,1, 2, 3,4], 	// Custom threshold for the scale
+				legendCellSize: 30
 			});
 		}
 		
@@ -97,7 +113,6 @@
 			if(value == "BRAINFOG")
 				displayBrainFog();
 				
-		
 		}
 		
 		function displayPain(){
@@ -116,6 +131,15 @@
 			calendar.update("brainfog.json", false, calendar.RESET_ALL_ON_UPDATE);
 		}
 	</script>
+	<div id="legend"><p>Severity Level Legend</p> <br/>
+	<div id="empty"><p>No data</p></div>
+	<div id="zero"><p>0</p></div>
+	<div id="one"><p>1</p></div>
+	<div id="two"><p>2</p></div>
+	<div id="three"><p>3</p></div>
+	<div id="four"><p>4</p></div>
+	<div id="five"><p>5</p></div>
+	</div>
 	<br />
 	<br />
 	<br />
@@ -154,10 +178,14 @@
 	
 		var xAxis = d3.svg.axis()
 			.scale(x)
+			.innerTickSize([16])
 			.orient("bottom");
 
 		var yAxis = d3.svg.axis()
 			.scale(y)
+			.ticks(5)
+			.tickValues([0,1,2,3,4,5])
+			.innerTickSize([16])
 			.orient("left");
 
 		var line = d3.svg.line()
@@ -212,7 +240,7 @@
 				.append("text")
 				.attr("transform", "rotate(-90)")
 				.attr("y", 6)
-				.attr("dy", ".71em")
+				.attr("dy", "2em")
 				.style("text-anchor", "end")
 				.text("Severity");
 
@@ -230,10 +258,9 @@
 				.datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; })
 				.attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.level) + ")"; })
 				.attr("x", 3)
-				.attr("dy", ".35em")
+				.attr("dy", ".71em")
 				.text(function(d) { return d.name; });
 		});
-		
 	</script></div></div>
  </body>
 </html>
